# niver65

./: .gitignore  pyproject.toml
src/niver65/: bootstrap.py  fast_app.py  pytest.ini  set_logging.yaml  settings.py
src/niver65/adapters/models/: niver_party_orm.py
src/niver65/adapters/repositories/: abstract_repo.py  party_repo.py
src/niver65/database/: base_model.py  db_session.py
src/niver65/rest/: router.py
src/niver65/rest/dto/: erros_dto.py  models_dto.py
src/niver65/rest/endpoints/: entry_ep.py  healthcheck_ep.py  load_songs.py  suggestion_ep.py  token_ep.py
src/niver65/service_layer/: guests_service.py
src/niver65/templates/: base.html  base2.html  base3.html  good_max.html  goodbye.html  index.html  login.html  music_suggestion.html  show_all_music.html  suggest_music.html
src/niver65/templates/partials/: all_music_list.html  list_all_songs.html  music_item.html
